<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bg"
        android:src="@drawable/dashboard"
        android:scaleType="centerCrop"
        />

    <TextView
        android:id="@+id/design_syst"
        android:layout_width="363dp"
        android:layout_height="114dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="148dp"
        android:gravity="top"
        android:lineSpacingExtra="-18sp"
        android:text="@string/design_syst"
        android:textAppearance="@style/design_syst"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fully_coded"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="@string/fully_coded"
        android:textAppearance="@style/fully_coded"
        android:translationY="-0.11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/design_syst" />

    <Button
        android:id="@+id/spkbtn"
        android:layout_width="371dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:text="@string/text1"
        android:textAppearance="@style/text1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fully_coded" />

    <Button
        android:id="@+id/infobtn"
        android:layout_width="371dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:text="@string/text2"
        android:textAppearance="@style/text1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spkbtn" />

    <Button
        android:id="@+id/layananbtn"
        android:layout_width="371dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:text="@string/text3"
        android:textAppearance="@style/text1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infobtn" />


</androidx.constraintlayout.widget.ConstraintLayout>